[package]
name = "thresh"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
ckb-jsonrpc-types = "0.119.0"
ckb-types = "0.119.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-queue", "crossbeam-channel"] }
ezsockets = { version = "0.6.4", features = ["rustls"] }
figment = { version = "0.10.19", features = ["toml", "serde_json", "env"] }
secp256k1 = { version = "0.29.0", features = ["serde", "recovery"] }
serde = { version = "1.0.214", features = ["serde_derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["serde_json"] }
hex = { version = "0.4.3", features = ["serde"] }
bech32 = "0.8.1"
toml = "0.8.15"
url = "2.5.2"
ckb-hash = "0.119.0"
ckb-crypto = "0.119.0"
