[package]
name = "thresh"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
rumqttc = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
async-trait = "0.1"
tokio-stream = "0.1"
backoff = { version = "0.4", features = ["tokio"] }
mockall = "0.11"
test-log = "0.2"
rand = "0.8"
native-tls = "0.2"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.3"
